Modificaciones en el diseño

--- a/styles/stylesDetalleProd.css
+++ b/styles/stylesDetalleProd.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-    background: #14240f;
+    background: #1d2b1f;
     padding: 20px;
     border-radius: 30px;
     width: 90%;
