--- a/styles/stylesContrsena.css
+++ b/styles/stylesContrsena.css
@@ -10,11 +10,13 @@ body {
 
 .contra-container {
     width: 90%;
-    max-width: 400px;
+    max-width: 350px;
     background: #1d2b1f;
     border-radius: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     text-align: center;
     padding: 20px;
+    box-sizing: border-box;
 }
 
 
