--- a/styles/stylesInicio.css
+++ b/styles/stylesInicio.css
@@ -10,11 +10,14 @@ body {
 
 .login-container {
     width: 90%;
-    max-width: 400px;
+    max-width: 350px;
     background: #1d2b1f;
     border-radius: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     text-align: center;
     padding: 20px;
+    top: 50px;
+    box-sizing: border-box;
 }
 
 
