--- a/styles/stylesMenuProductos.css
+++ b/styles/stylesMenuProductos.css
@@ -1,6 +1,10 @@
 body {
     background-color: #162914;
     font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;  
     margin: 0;
 }
 
@@ -8,7 +12,7 @@ body {
     position: fixed;
     left: -100%;
     top: 0;
-    width: 70%;
+    width: 20%;
     height: 100vh;
     background-color: white;
     padding: 20px;
@@ -45,8 +49,16 @@ body {
 }
 
 .container {
+    background: #1d2b1f;
     padding: 20px;
+    max-width: 500px;
+    border-radius: 30px 30px 0 0;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    box-sizing: border-box;
+    
+    width: 90%;
 }
+
 
 .header {
     display: flex;
